<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="id.my.okisulton.covid19data.ui.fragment.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_dashboard"
        android:name="id.my.okisulton.covid19data.ui.fragment.indonesia.IdFragment"
        android:label="@string/title_id"
        tools:layout="@layout/fragment_id" />

    <fragment
        android:id="@+id/navigation_notifications"
        android:name="id.my.okisulton.covid19data.ui.fragment.global.GlobalFragment"
        android:label="@string/title_global"
        tools:layout="@layout/fragment_global" />
</navigation>