<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="10dp">

    <ProgressBar
        style="@style/TextAppearance.AppCompat.Large"
        android:id="@+id/progressbar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:layout_marginTop="10dp"
        android:id="@+id/title_global"
        style="@style/TextAppearance.AppCompat.Large"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Data Covid Indonesia"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints" />

    <androidx.cardview.widget.CardView
        app:layout_constraintTop_toBottomOf="@+id/title_global"
        android:id="@+id/cardView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardCornerRadius="15dp"
        app:cardPreventCornerOverlap="true"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="10dp"
        tools:layout_editor_absoluteY="10dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/home_gradient_id"
            android:minHeight="100dp"
            android:padding="10dp">

            <TextView
                android:id="@+id/textViewSub1Title"
                style="@style/TextAppearance.AppCompat.Large"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/total_kasus"
                android:textColor="@android:color/white"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/positif"
                style="@style/TextAppearance.AppCompat.Medium"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/textViewSub1Title"
                android:text="@string/positif"
                android:textColor="@android:color/white" />

            <TextView
                android:id="@+id/total_positive_id"
                style="@style/TextAppearance.AppCompat.Medium"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/textViewSub1Title"
                android:layout_marginStart="10dp"
                android:layout_toEndOf="@+id/positif"
                android:textColor="@android:color/white" />

            <TextView
                style="@style/TextAppearance.AppCompat.Medium"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/textViewSub1Title"
                android:layout_marginStart="10dp"
                android:layout_toEndOf="@+id/total_positive_id"
                android:text="@string/orang"
                android:textColor="@android:color/white" />

            <TextView
                android:id="@+id/meninggal"
                style="@style/TextAppearance.AppCompat.Medium"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/positif"
                android:text="@string/meninggal"
                android:textColor="@android:color/white" />

            <TextView
                android:id="@+id/total_meninggal_id"
                style="@style/TextAppearance.AppCompat.Medium"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/total_positive_id"
                android:layout_marginStart="10dp"
                android:layout_toEndOf="@+id/meninggal"
                android:textColor="@android:color/white" />

            <TextView
                style="@style/TextAppearance.AppCompat.Medium"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/total_positive_id"
                android:layout_marginStart="10dp"
                android:layout_toEndOf="@+id/total_meninggal_id"
                android:text="@string/orang"
                android:textColor="@android:color/white" />

            <TextView
                android:id="@+id/sembuh"
                style="@style/TextAppearance.AppCompat.Medium"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/meninggal"
                android:text="@string/sembuh"
                android:textColor="@android:color/white" />

            <TextView
                android:id="@+id/total_sembuh_id"
                style="@style/TextAppearance.AppCompat.Medium"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/meninggal"
                android:layout_marginStart="10dp"
                android:layout_toEndOf="@+id/sembuh"
                android:textColor="@android:color/white" />

            <TextView
                style="@style/TextAppearance.AppCompat.Medium"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/meninggal"
                android:layout_marginStart="10dp"
                android:layout_toEndOf="@+id/total_sembuh_id"
                android:text="@string/orang"
                android:textColor="@android:color/white" />


            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:adjustViewBounds="true"
                android:cropToPadding="true"
                android:maxHeight="90dp"
                android:src="@drawable/id" />

        </RelativeLayout>
    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/title_prov"
        style="@style/TextAppearance.AppCompat.Large"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="Data Covid Provinsi"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cardView"
        tools:ignore="MissingConstraints" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rc_provinsi"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="10dp"
        android:paddingBottom="200dp"
        app:layout_constraintTop_toBottomOf="@+id/title_prov" />

</androidx.constraintlayout.widget.ConstraintLayout>