<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginRight="5dp"
    android:layout_marginLeft="5dp"
    android:layout_marginTop="5dp"
    app:cardCornerRadius="6dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tv_provinsi"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="#000000"
            android:text="DKI"
            style="@style/TextAppearance.AppCompat.Large"/>

      <LinearLayout
          android:layout_marginTop="10dp"
          android:layout_width="match_parent"
          android:layout_height="140dp"
          android:orientation="horizontal"
          android:gravity="center"
          android:padding="10dp">

          <androidx.cardview.widget.CardView
              android:layout_width="100dp"
              android:layout_height="100dp"
              android:layout_marginEnd="10dp">

              <TextView
                  android:id="@+id/tv_positif"
                  android:layout_width="wrap_content"
                  android:layout_height="wrap_content"
                  android:textSize="25sp"
                  android:textColor="@android:color/holo_green_light"
                  android:text="545"
                  android:layout_gravity="center"
                  tools:ignore="RtlSymmetry" />

              <TextView
                  android:layout_width="wrap_content"
                  android:layout_height="wrap_content"
                  android:text="@string/positif"
                  style="@style/TextAppearance.AppCompat.Medium"
                  android:textColor="@android:color/black"
                  android:layout_marginStart="25dp"/>

          </androidx.cardview.widget.CardView>

          <androidx.cardview.widget.CardView
              android:layout_width="100dp"
              android:layout_height="100dp"
              android:layout_marginEnd="10dp">

              <TextView
                  android:layout_width="wrap_content"
                  android:layout_height="wrap_content"
                  android:text="@string/meninggal"
                  style="@style/TextAppearance.AppCompat.Medium"
                  android:textColor="@android:color/black"
                  android:layout_marginStart="10dp"/>
              <TextView
                  android:id="@+id/tv_meninggal"
                  android:layout_width="wrap_content"
                  android:layout_height="wrap_content"
                  android:textSize="25sp"
                  android:textColor="@android:color/holo_red_dark"
                  android:text="545"
                  android:layout_gravity="center"
                  tools:ignore="RtlSymmetry" />

          </androidx.cardview.widget.CardView>

          <androidx.cardview.widget.CardView
              android:layout_width="100dp"
              android:layout_height="100dp"
              android:background="@android:color/holo_blue_dark">

              <TextView
                  android:layout_width="wrap_content"
                  android:layout_height="wrap_content"
                  android:text="@string/sembuh"
                  style="@style/TextAppearance.AppCompat.Medium"
                  android:textColor="@android:color/black"
                  android:layout_marginStart="20dp"/>

              <TextView
                  android:id="@+id/tv_sembuh"
                  android:layout_width="wrap_content"
                  android:layout_height="wrap_content"
                  android:textSize="25sp"
                  android:textColor="@android:color/holo_blue_bright"
                  android:text="545"
                  android:layout_gravity="center"
                  tools:ignore="RtlSymmetry" />

          </androidx.cardview.widget.CardView>

            </LinearLayout>


    </LinearLayout>

</androidx.cardview.widget.CardView>