<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

   <ProgressBar
       android:id="@+id/progressbar"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       app:layout_constraintBottom_toBottomOf="parent"
       app:layout_constraintEnd_toEndOf="parent"
       app:layout_constraintStart_toStartOf="parent"
       app:layout_constraintTop_toTopOf="parent" />


   <TextView
       android:layout_marginTop="10dp"
       android:id="@+id/title_global"
       style="@style/TextAppearance.AppCompat.Large"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:text="Data Covid Global"
       android:textAlignment="center"
       app:layout_constraintEnd_toEndOf="parent"
       app:layout_constraintStart_toStartOf="parent"
       app:layout_constraintTop_toTopOf="parent"
       tools:ignore="MissingConstraints" />

   <LinearLayout
       android:visibility="gone"
       android:id="@+id/linearLayout"
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
       android:orientation="vertical"
       android:padding="10dp"
       app:layout_constraintTop_toBottomOf="@+id/title_global"
       tools:ignore="MissingConstraints">


      <androidx.cardview.widget.CardView
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:layout_marginTop="10dp"
          app:cardCornerRadius="15dp"
          app:cardPreventCornerOverlap="true">

         <RelativeLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:background="@drawable/home_gradient_maths"
             android:minHeight="100dp"
             android:padding="10dp">

            <TextView
                android:id="@+id/textViewSub1Title"
                style="@style/TextAppearance.AppCompat.Large"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/total_positive"
                android:textColor="@android:color/white"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/total_positive_global"
                style="@style/TextAppearance.AppCompat.Medium"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/textViewSub1Title"
                android:textColor="@android:color/white" />

            <TextView
                style="@style/TextAppearance.AppCompat.Medium"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/total_positive_global"
                android:text="@string/orang"
                android:textColor="@android:color/white"
                android:textStyle="italic" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:adjustViewBounds="true"
                android:cropToPadding="true"
                android:maxHeight="90dp"
                android:src="@drawable/sick" />

         </RelativeLayout>
      </androidx.cardview.widget.CardView>

      <androidx.cardview.widget.CardView
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:layout_marginTop="10dp"
          app:cardCornerRadius="15dp"
          app:cardPreventCornerOverlap="true">

         <RelativeLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:background="@drawable/gradient_recovered"
             android:minHeight="100dp"
             android:padding="10dp">

            <TextView
                android:id="@+id/textViewSub1Title2"
                style="@style/TextAppearance.AppCompat.Large"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/total_sembuh"
                android:textColor="@android:color/white"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/total_recovered_global"
                style="@style/TextAppearance.AppCompat.Medium"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/textViewSub1Title2"
                android:textColor="@android:color/white" />

            <TextView
                style="@style/TextAppearance.AppCompat.Medium"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/total_recovered_global"
                android:text="@string/orang"
                android:textColor="@android:color/white"
                android:textStyle="italic" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:adjustViewBounds="true"
                android:cropToPadding="true"
                android:maxHeight="90dp"
                android:src="@drawable/smile" />

         </RelativeLayout>
      </androidx.cardview.widget.CardView>

      <androidx.cardview.widget.CardView
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:layout_marginTop="10dp"
          app:cardCornerRadius="15dp"
          app:cardPreventCornerOverlap="true">

         <RelativeLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:background="@drawable/gradient_dead"
             android:minHeight="100dp"
             android:padding="10dp">

            <TextView
                android:id="@+id/textViewSub1Title1"
                style="@style/TextAppearance.AppCompat.Large"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/total_meninggal"
                android:textColor="@android:color/white"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/total_dead_global"
                style="@style/TextAppearance.AppCompat.Medium"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/textViewSub1Title1"
                android:textColor="@android:color/white" />

            <TextView
                style="@style/TextAppearance.AppCompat.Medium"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/total_dead_global"
                android:text="@string/orang"
                android:textColor="@android:color/white"
                android:textStyle="italic" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:adjustViewBounds="true"
                android:cropToPadding="true"
                android:maxHeight="90dp"
                android:src="@drawable/cry" />

         </RelativeLayout>
      </androidx.cardview.widget.CardView>


   </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>